Padronização e alterações de design

--- a/produtos.html
+++ b/produtos.html
@@ -45,6 +45,7 @@
             <span>Lista de desejos</span>
         </a>
     </aside>
+    
 
     <main>
         <br><br>
@@ -123,6 +124,7 @@
             <h1>Para lançar</h1>
             <div class="container3" id="lancamento">
             </div>
+            <hr>
             
             <h1>Maiores avaliações</h1>
             <div class="container4" id="avaliacao">
@@ -132,7 +134,6 @@
             <h1>Melhor preço</h1>
             <div class="container5" id="preco">
             </div>
-            <hr>
 
 
         </div>
@@ -190,7 +191,7 @@
                         <br>
                         <div>
                             <input type="checkbox" name="listaDeDesejos" id="adicionarDesejo">
-                            <label for="">Adicionar a lista de desejos</label><br>
+                            <label for="adicionarDesejo">Adicionar a lista de desejos</label><br>
                         </div>
                     </div>
                     <button id="comprarJogo" onclick="comprou()">Comprar</button>
@@ -199,7 +200,6 @@
         </div>        
     </div>
     <!-- fim da tela do jogo clicado -->
-
     <div id="listaDeDesejos">
         <h1 onclick="document.getElementById('listaDeDesejos').style.display = 'none';">X</h1>
         <table id="tabelaListaDesejos" >
