--- a/produtos.html
+++ b/produtos.html
@@ -18,34 +18,11 @@
     <title>Produtos em destaque</title>
 </head>
 <body>
-    <header> 
-        <img class="iconHeader" src="IMG/configuracao.svg"
-        alt="Configurações" onclick="openDiv('div-config')">
+    <!-- Header -->
+    <main-cabecalho class="header"></main-cabecalho >
 
-        <a href="index.html">
-            <img src="IMG/logotipo.png" id="logo" alt="Logo">
-            <span>GamesIndies</span>
-        </a>
-
-        <img class="iconHeader" src="IMG/usuario.svg"
-        alt="Usuário" onclick="openDiv('div-user')">
-    </header>
-
-    <aside>
-        <a href="produtos.html" class="ancora optionAside">
-            <img class="iconOptionAside" src="IMG/produtos.svg" alt="icone produtos">
-            <span>Produtos</span>
-        </a>
-        <a href="quemSomos.html" class="ancora optionAside">
-            <img class="iconOptionAside" src="IMG/quemSomos.svg" alt="icone quem somos">
-            <span>Quem somos</span>
-        </a>
-        <a class="ancora optionAside" onclick="openDiv('listaDeDesejos')">
-            <img class="iconOptionAside" src="IMG/listaDesejos.svg" alt="icone lista de desejos">
-            <span>Lista de desejos</span>
-        </a>
-    </aside>
-    
+    <!-- Aside -->
+    <navegacao-lateral class="aside"></navegacao-lateral>
 
     <main>
         <br><br>
@@ -58,66 +35,7 @@
 
             <h1>Mais recentes</h1>
             <div class="container2" id="recente">
-                <!-- <div onclick="buscar(12); elementoAberto = document.getElementById('backgroundPopUpProduto')" class="produto produto-parte2">
-                    <div class="informacaoTexto">
-                        <h2>Sea of Stars</h2>
-                        <h4>R$149,99 &nbsp;&nbsp;&nbsp; <span>4,6
-                             <img src="IMG/estrela.png" width="14px" alt="">
-                             <img src="IMG/estrela.png" width="14px" alt="">
-                             <img src="IMG/estrela.png" width="14px" alt="">
-                             <img src="IMG/estrela.png" width="14px" alt="">
-                             <img src="IMG/estrela_metade.png" width="14px" alt="">
-                            </span></h4>
-                    </div>
-                </div>
-                <div onclick="buscar(14); elementoAberto = document.getElementById('backgroundPopUpProduto')" class="produto produto-parte2">
-                    <div class="informacaoTexto">
-                        <h2>Stray</h2>
-                        <h4>R$95,99 &nbsp;&nbsp;&nbsp; <span>4,3 
-                            <img src="IMG/estrela.png" width="14px" alt="">
-                            <img src="IMG/estrela.png" width="14px" alt="">
-                            <img src="IMG/estrela.png" width="14px" alt="">
-                            <img src="IMG/estrela.png" width="14px" alt="">
-                            <img src="IMG/estrela_metade.png" width="14px" alt="">
-                        </span></h4>
-                    </div>
-                </div>
-                <div onclick="buscar(9); elementoAberto = document.getElementById('backgroundPopUpProduto')" class="produto produto-parte2">
-                    <div class="informacaoTexto">
-                        <h2>Inscryption</h2>
-                        <h4>R$45,99 &nbsp;&nbsp;&nbsp; <span>4,5
-                            <img src="IMG/estrela.png" width="14px" alt="">
-                            <img src="IMG/estrela.png" width="14px" alt="">
-                            <img src="IMG/estrela.png" width="14px" alt="">
-                            <img src="IMG/estrela.png" width="14px" alt="">
-                            <img src="IMG/estrela_metade.png" width="14px" alt="">
-                        </span></h4>
-                    </div>
-                </div>
-                <div onclick="buscar(4); elementoAberto = document.getElementById('backgroundPopUpProduto')" class="produto produto-parte2">
-                    <div class="informacaoTexto">
-                        <h2>Dead Cells</h2>
-                        <h4>R$49,99 &nbsp;&nbsp;&nbsp; <span>4,7
-                            <img src="IMG/estrela.png" width="14px" alt="">
-                            <img src="IMG/estrela.png" width="14px" alt="">
-                            <img src="IMG/estrela.png" width="14px" alt="">
-                            <img src="IMG/estrela.png" width="14px" alt="">
-                            <img src="IMG/estrela_metade.png" width="14px" alt="">
-                        </span></h4>
-                    </div>
-                </div>
-                <div onclick="buscar(2); elementoAberto = document.getElementById('backgroundPopUpProduto')" class="produto produto-parte2">
-                    <div class="informacaoTexto">
-                        <h2>Celeste</h2>
-                        <h4>R$24,99 &nbsp;&nbsp;&nbsp; <span>4,9
-                            <img src="IMG/estrela.png" width="14px" alt="">
-                            <img src="IMG/estrela.png" width="14px" alt="">
-                            <img src="IMG/estrela.png" width="14px" alt="">
-                            <img src="IMG/estrela.png" width="14px" alt="">
-                            <img src="IMG/estrela_metade.png" width="14px" alt="">
-                        </span></h4>
-                    </div>
-                </div> -->
+
             </div>
             <hr>
 
@@ -140,40 +58,15 @@
         <br><br>
     </main>
 
-    <footer>
-        <div>
-            <h3>Desenvolvido por:</h3>
-            <a target="_blank" style="text-decoration: none;" href="https://github.com/FelipeGSG">
-                <div class="desenvolvedorFooter">
-                    <img class="imgFooter" src="IMG/github-mark-white.png" alt="Github">
-                    <p>Felipe</p>
-                </div>
-            </a>
-        </div>
-        <div>
-            <p>Todos os direitos reservados, 2024</p>
-        </div>
-    </footer>
+    <!-- Footer -->
+    <main-footer class="footer"></main-footer>
 
     <!-- divConfigurações -->
-    <div id="div-config">
-        <h1 
-            onclick="document.getElementById('div-config').style.display = 'none';
-            elementoAberto = 'inicio'">X</h1>
-        <button class="button-config" onclick="mudarContraste()">Alto contraste</button>
-        <button class="button-config" onclick="toggleAnimacao()">Sem animações</button>
-        <button class="button-config" onclick="toggleBlur()">Blur ativado</button>
-    </div>
-
-
-    <!-- divUsuario -->
-    <div id="div-user">
-        <h2 id="displayNomeUsuario">...</h2>
-        <h3 id="displayEmail">...</h3>
-        <button id="buttonLogarSair" onclick="botaoSairLogar()">...</button>
-        <button id="buttonFechar" onclick="openDiv()">Fechar</button>
-    </div>
+    <configuracoes-gerais id="div-config"></configuracoes-gerais>
     
+    <!-- divUsuario -->
+    <login-usuario id="div-user"></login-usuario>
+
     <!-- tela do jogo clicado -->
     <div id="backgroundPopUpProduto">
         <div id="popUpProduto">
@@ -213,9 +106,16 @@
         </table>
     </div>
 
-    <!-- <script src="script.js"></script> -->
+    <script src="SCRIPTS/componentes/header.js"></script>
+    <script src="SCRIPTS/componentes/aside.js"></script>
+    <script src="SCRIPTS/componentes/footer.js"></script>
+    <script src="SCRIPTS/componentes/configuracoes.js"></script>
+    <script src="SCRIPTS/componentes/login.js"></script>
+
     <script src="SCRIPTS/geral.js"></script>
-   <script src="SCRIPTS/produto.js"></script>
-   <script src="SCRIPTS/listaDeDesejos.js"></script>
+    <script src="SCRIPTS/produto.js"></script>
+    <script src="SCRIPTS/listaDeDesejos.js"></script>
+
+
 </body>
 </html>
