--- a/biblioteca.html
+++ b/biblioteca.html
@@ -26,6 +26,10 @@
         
     </main>
 
+    <link rel="stylesheet" href="CSS/promocao.css">
+    <evento-promocao id="promocao" data="" desconto="100"></evento-promocao>
+    <script src="SCRIPTS/componentes/promocao.js"></script>
+
 
     <!-- Footer -->
     <main-footer class="footer"></main-footer>
