--- a/produtos.html
+++ b/produtos.html
@@ -106,13 +106,18 @@
         </table>
     </div>
 
+    <link rel="stylesheet" href="CSS/promocao.css">
+    <evento-promocao id="promocao" data="" desconto="100"></evento-promocao>
+
     <script src="SCRIPTS/componentes/header.js"></script>
     <script src="SCRIPTS/componentes/aside.js"></script>
     <script src="SCRIPTS/componentes/footer.js"></script>
     <script src="SCRIPTS/componentes/configuracoes.js"></script>
     <script src="SCRIPTS/componentes/login.js"></script>
 
-    <script src="SCRIPTS/geral.js"></script>
+    <script defer src="SCRIPTS/geral.js"></script>
+    <script defer src="SCRIPTS/componentes/promocao.js"></script>
+
     <script src="SCRIPTS/produto.js"></script>
     <script src="SCRIPTS/listaDeDesejos.js"></script>
 
