--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <link rel="stylesheet" href="CSS/navegacao.css">
     <link rel="stylesheet" href="CSS/style.css">
 
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>GamesIndies</title>
+
 </head>
 <body>
     <!-- Header -->
@@ -84,9 +86,13 @@
     <script src="SCRIPTS/componentes/aside.js"></script>
     <script src="SCRIPTS/componentes/footer.js"></script>
     <script src="SCRIPTS/componentes/configuracoes.js"></script>
-    <script src="SCRIPTS/componentes/login.js"></script>
+    <script defer src="SCRIPTS/componentes/login.js"></script>
 
 
+    <script>
+displayUsuario()
+
+    </script>
 
 
 </body>
